Fix CORS to use env var for allowed origins